@@ -1,3 +1,7 @@
+2006-01-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* libgdict/Makefile.am: fixed the enum generation.
+
 2006-01-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* data/GNOME_DictionaryApplet.xml: change the mnemonic for the "Clear"
